# Packaging for the `tsdynamics._rust` engine extension.
#
# Stream **I-WHEEL** (ROADMAP §11) resolved the open packaging-shape question as a
# *staged* plan:
#
#   * **Now (pre-M3): a separable, optional accelerator.** This pyproject builds a
#     standalone `tsdynamics-rust-engine` wheel that ships exactly ONE file —
#     `tsdynamics/_rust.abi3.so` — into the `tsdynamics` import namespace. It does
#     NOT ship a `tsdynamics/__init__.py`, so it coexists with the pure-Python
#     `tsdynamics` wheel with zero file-path collision: `pip install` lays both
#     into the same `site-packages/tsdynamics/`, and `import tsdynamics._rust`
#     resolves to the adjacent extension. The pure-Python `tsdynamics` package
#     (root `pyproject.toml`, hatchling) and its python-semantic-release PyPI
#     release stay untouched while the v2 backends remain the default.
#   * **At M3 (one wheel):** when the v2 backends are retired (I-XVAL gate) and the
#     engine becomes mandatory, the two distributions fold into a single
#     `tsdynamics` maturin wheel (root build-backend → maturin, `python-source =
#     "src"`, same `module-name`). See `docs/theory/packaging.md` for the recipe.
#
# The cross-platform wheels are built by `.github/workflows/wheels.yml`
# (PyO3/maturin-action: manylinux + musllinux + macOS + Windows, abi3 so one wheel
# per platform covers CPython >= 3.12). The pre-existing `engine-bindings.yml` dev
# build is independent: it `cargo build`s the cdylib and drops it into the source
# tree (`src/tsdynamics/_rust.abi3.so`) for the *editable* install, because an
# editable `tsdynamics` puts `__path__` at `src/tsdynamics/` where a site-packages
# wheel would be invisible.
#
#     # standalone wheel (what wheels.yml ships):
#     maturin build --release -m crates/tsdyn-core/Cargo.toml --out dist
#     # editable-dev shortcut (what engine-bindings.yml uses):
#     cargo build --release --features extension-module \
#         --manifest-path crates/tsdyn-core/Cargo.toml
#     cp crates/tsdyn-core/target/release/lib_rust.so src/tsdynamics/_rust.abi3.so
[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tsdynamics-rust-engine"
description = "TSDynamics Rust engine extension (tsdynamics._rust): the zero-warmup tape interpreter + solver kernels."
requires-python = ">=3.12"
license = "MIT"
# numpy is the engine's sole runtime dependency: the whole FFI surface marshals
# numpy arrays (rust-numpy 0.26). Pinned to match the `tsdynamics` package it
# pairs with so the rust-numpy ABI stays consistent.
dependencies = ["numpy>=2.0,<3.0"]
# `Private :: Do Not Upload` keeps this interim pre-M3 accelerator off PyPI: it is
# built and distributed as a CI artifact only (the engine is not yet the default
# and is gated by I-XVAL). The M3 one-wheel convergence removes this classifier.
classifiers = ["Programming Language :: Rust", "Private :: Do Not Upload"]
dynamic = ["version"]

[tool.maturin]
# The compiled extension is the `_rust` submodule of the `tsdynamics` package.
module-name = "tsdynamics._rust"
# Mixed-layout mount: `python/tsdynamics/` is an (otherwise empty) package dir that
# makes maturin place the extension at `tsdynamics/_rust.abi3.so` — i.e. as a
# proper submodule — instead of emitting a broken top-level `_rust/` package. In
# mixed mode maturin does NOT synthesise a `tsdynamics/__init__.py`, which is
# exactly what lets this wheel coexist with the pure-Python `tsdynamics` wheel.
python-source = "python"
# The namespace mount carries a `.gitkeep` so the empty dir survives in git; it
# must never reach the wheel.
exclude = ["**/.gitkeep"]
# Enable the crate's `extension-module` feature (→ `pyo3/extension-module`), so
# the shipped .so does not link libpython. `cargo test`/`clippy` deliberately
# build WITHOUT this feature (see crates/tsdyn-core/Cargo.toml).
features = ["extension-module"]
