[package]
name = "tsdyn-engine"
description = "TSDynamics engine: problem definitions, the integrate loop, rayon ensembles, RNG/Wiener substrate and DDE history buffers."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tsdyn-ir.workspace = true
tsdyn-vm.workspace = true
tsdyn-jit.workspace = true
tsdyn-solvers.workspace = true
# The ensemble fan-out (ensemble.rs) lives here as of stream E5; rayon is
# pre-pinned in the workspace so the whole engine agrees on one version.
rayon.workspace = true
