[package]
name = "tsdyn-maps"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Iterate / Lyapunov kernels for TSDynamics discrete maps."

[lib]
crate-type = ["rlib"]

[dependencies]
tsdyn-core = { path = "../tsdyn-core" }
nalgebra = "0.34"
