[package]
name = "tsdyn-ode"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust adaptive ODE integrators for TSDynamics (explicit RK + Rosenbrock stiff methods)."

[dependencies]
nalgebra = "0.34"
tsdyn-core = { path = "../tsdyn-core" }
tsdyn-solver-base = { path = "../tsdyn-solver-base" }
