[package]
name = "tsdyn-solvers"
description = "TSDynamics solver kernels: the Solver trait plus one module per method (explicit RK, implicit/stiff, SDE, ...)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tsdyn-ir.workspace = true
