[package]
name = "tsdynamics-core"
version = "0.2.0"
edition = "2021"
description = "Optional Rust acceleration kernels for TSDynamics"
license = "MIT"

[lib]
name = "tsdynamics_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py312"] }
numpy = "0.26"
rayon = "1.10"
