[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tsdynamics-core"
description = "Optional Rust acceleration kernels for TSDynamics (rayon-parallel numeric primitives)."
requires-python = ">=3.12"
license = "MIT"
classifiers = ["Programming Language :: Rust", "Private :: Do Not Upload"]
dynamic = ["version"]

[tool.maturin]
module-name = "tsdynamics_core"
features = ["pyo3/extension-module"]
